--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
       <artifactId>flyway-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.kubernetes</groupId>
-      <artifactId>client-java</artifactId>
-      <version>7.0.0</version>
+      <groupId>io.fabric8</groupId>
+      <artifactId>openshift-client</artifactId>
+      <version>4.9.1</version>
     </dependency>
 
     <dependency>
