--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.baloiseincubator</groupId>
+    <groupId>dev.baloise</groupId>
     <artifactId>octopus</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>octopus</name>
